--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,10 +4,11 @@
   "description": "MonoX backend",
   "license": "ISC",
   "author": "Jwala Gupta",
-  "type": "commonjs",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
