Implement admin login functionality with email and password validation

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,4 +1,10 @@
-PORT = 
-MONGODB_URI = ""
-MONGO_DB_USERNAME = 
-MONGO_DB_PASSWORD = 
+PORT = 7000
+MONGODB_URI = "mongo db url"
+MONGO_DB_USERNAME = database username
+MONGO_DB_PASSWORD = database password
+CLOUDINARY_NAME = "cloud name"
+CLOUDINARY_API_KEY = "cloud api key"
+CLOUDINARY_SECRET_KEY = "cloud secret password"
+JWT_SECRET = "JWT secret key "
+ADMIN_EMAIL = "Your Admin Email"
+ADMIN_PASSWORD = "Your Admin Password"
