--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # Node modules (frontend & backend dono)
 frontend/node_modules/
 backend/node_modules/
+admin/node_modules/
 
 # Environment files
 backend/.env
+admin/.env
 
 # Logs
 *.log
